--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -3,7 +3,7 @@
         <img src="/apple-touch-icon.png" alt="HoML Logo" class="h-8 mr-2">
         <h1 class="text-2xl font-bold">HoML</h1>
     </a>
-    <nav class="flex items-center">
+    <nav class="hidden md:flex items-center">
         <form action="/models/" method="GET" class="relative mr-4">
             <input type="search" name="q" placeholder="Search models..." class="bg-gray-800 border border-gray-700 rounded-lg px-4 py-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500 w-48 transition-all duration-300 focus:w-64">
             <svg class="absolute top-1/2 right-3 transform -translate-y-1/2 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -14,4 +14,21 @@
         <a href="/download.html" class="text-lg {% if page == 'download.html' %}text-white font-bold{% else %}text-gray-400{% endif %} hover:text-white mr-4">Download</a>
         <a href="https://github.com/wsmlby/homl" class="text-lg text-gray-400 hover:text-white">GitHub</a>
     </nav>
+    <div class="md:hidden flex items-center">
+        <button id="mobile-menu-button" class="text-white focus:outline-none">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+            </svg>
+        </button>
+    </div>
 </header>
+<div id="mobile-menu" class="hidden md:hidden">
+    <nav class="flex flex-col items-center mt-4">
+        <form action="/models/" method="GET" class="relative mb-4">
+            <input type="search" name="q" placeholder="Search models..." class="bg-gray-800 border border-gray-700 rounded-lg px-4 py-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500 w-full">
+        </form>
+        <a href="/models/" class="text-lg text-gray-400 hover:text-white mb-2">Models</a>
+        <a href="/download.html" class="text-lg {% if page == 'download.html' %}text-white font-bold{% else %}text-gray-400{% endif %} hover:text-white mb-2">Download</a>
+        <a href="https://github.com/wsmlby/homl" class="text-lg text-gray-400 hover:text-white">GitHub</a>
+    </nav>
+</div>
