--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -23,5 +23,6 @@
     {% include 'templates/footer.html' %}
 
     <script src="/js/app.js"></script>
+    {% block scripts %}{% endblock %}
 </body>
 </html>
