--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -11,6 +11,7 @@
             </svg>
         </form>
         <a href="/models/" class="text-lg text-gray-400 hover:text-white mr-4">Models</a>
+        <a href="/docs/cli.html" class="text-lg text-gray-400 hover:text-white mr-4">Docs</a>
         <a href="/download.html" class="text-lg {% if page == 'download.html' %}text-white font-bold{% else %}text-gray-400{% endif %} hover:text-white mr-4">Download</a>
         <a href="https://github.com/wsmlby/homl" class="text-lg text-gray-400 hover:text-white">GitHub</a>
     </nav>
@@ -28,6 +29,7 @@
             <input type="search" name="q" placeholder="Search models..." class="bg-gray-800 border border-gray-700 rounded-lg px-4 py-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500 w-full">
         </form>
         <a href="/models/" class="text-lg text-gray-400 hover:text-white mb-2">Models</a>
+        <a href="/docs/" class="text-lg text-gray-400 hover:text-white mr-4">Docs</a>
         <a href="/download.html" class="text-lg {% if page == 'download.html' %}text-white font-bold{% else %}text-gray-400{% endif %} hover:text-white mb-2">Download</a>
         <a href="https://github.com/wsmlby/homl" class="text-lg text-gray-400 hover:text-white">GitHub</a>
     </nav>
