--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -10,9 +10,9 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
             </svg>
         </form>
-        <a href="/models/" class="text-lg text-gray-400 hover:text-white mr-4">Models</a>
-        <a href="/docs/cli.html" class="text-lg text-gray-400 hover:text-white mr-4">Docs</a>
-        <a href="/download.html" class="text-lg {% if page == 'download.html' %}text-white font-bold{% else %}text-gray-400{% endif %} hover:text-white mr-4">Download</a>
+        <a href="/models/" class="text-lg {% if page.startswith('models') %}text-white{% else %}text-gray-400{% endif %} hover:text-white mr-4">Models</a>
+        <a href="/docs/cli.html" class="text-lg {% if page.startswith('docs') %}text-white{% else %}text-gray-400{% endif %} hover:text-white mr-4">Docs</a>
+        <a href="/download.html" class="text-lg {% if page == 'download.html' %}text-white{% else %}text-gray-400{% endif %} hover:text-white mr-4">Download</a>
         <a href="https://github.com/wsmlby/homl" class="text-lg text-gray-400 hover:text-white">GitHub</a>
     </nav>
     <div class="md:hidden flex items-center">
@@ -28,9 +28,9 @@
         <form action="/models/" method="GET" class="relative mb-4">
             <input type="search" name="q" placeholder="Search models..." class="bg-gray-800 border border-gray-700 rounded-lg px-4 py-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500 w-full">
         </form>
-        <a href="/models/" class="text-lg text-gray-400 hover:text-white mb-2">Models</a>
-        <a href="/docs/" class="text-lg text-gray-400 hover:text-white mr-4">Docs</a>
-        <a href="/download.html" class="text-lg {% if page == 'download.html' %}text-white font-bold{% else %}text-gray-400{% endif %} hover:text-white mb-2">Download</a>
+        <a href="/models/" class="text-lg {% if page.startswith('models') %}text-white{% else %}text-gray-400{% endif %} hover:text-white mb-2">Models</a>
+        <a href="/docs/cli.html" class="text-lg {% if page.startswith('docs') %}text-white{% else %}text-gray-400{% endif %} hover:text-white mb-2">Docs</a>
+        <a href="/download.html" class="text-lg {% if page == 'download.html' %}text-white{% else %}text-gray-400{% endif %} hover:text-white mb-2">Download</a>
         <a href="https://github.com/wsmlby/homl" class="text-lg text-gray-400 hover:text-white">GitHub</a>
     </nav>
 </div>
