--- a/src/templates/blog_index.html
+++ b/src/templates/blog_index.html
@@ -1,18 +1,17 @@
 {% extends "templates/base.html" %}
 
 {% block content %}
-<div class="prose prose-invert mx-auto">
-    <h1>Blog</h1>
-    <hr class="my-6 border-gray-700">
-    <ul>
+<div class="max-w-4xl mx-auto">
+    <h1 class="text-5xl font-extrabold text-center mb-12">Blog</h1>
+    <div class="space-y-12">
         {% for post in posts %}
-        <li>
+        <div class="group border-l-4 border-gray-700 pl-6 hover:border-blue-400 transition-colors duration-200">
             <a href="{{ post.path }}">
-                <h2>{{ post.title }}</h2>
+                <h2 class="text-3xl font-bold group-hover:text-blue-400 transition-colors duration-200">{{ post.title }}</h2>
             </a>
-            <p class="text-gray-400">Published on {{ post.date }} by {{ post.author }}</p>
-        </li>
+            <p class="text-gray-400 mt-2">Published on {{ post.date }} by {{ post.author }}</p>
+        </div>
         {% endfor %}
-    </ul>
+    </div>
 </div>
 {% endblock %}
