--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -33,6 +33,7 @@
     </div>
 
     <script src="/js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.xkcd@1.1.13/dist/chart.xkcd.min.js"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
