--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -12,7 +12,7 @@
         </form>
         <a href="/models/" class="text-lg {% if page.startswith('models') %}text-white{% else %}text-gray-400{% endif %} hover:text-white mr-6">Models</a>
         <a href="/blogs/index.html" class="text-lg {% if page.startswith('blog') %}text-white{% else %}text-gray-400{% endif %} hover:text-white mr-6">Blog</a>
-        <a href="/docs/cli.html" class="text-lg {% if page.startswith('docs') %}text-white{% else %}text-gray-400{% endif %} hover:text-white mr-6">Docs</a>
+        <a href="/docs/getting-started.html" class="text-lg {% if page.startswith('docs') %}text-white{% else %}text-gray-400{% endif %} hover:text-white mr-6">Docs</a>
         <a href="/download.html" class="text-lg {% if page == 'download.html' %}text-white{% else %}text-gray-400{% endif %} hover:text-white mr-6">Download</a>
         <a href="https://github.com/wsmlby/homl" class="text-lg text-gray-400 hover:text-white">GitHub</a>
     </nav>
@@ -31,7 +31,7 @@
         </form>
         <a href="/models/" class="text-lg {% if page.startswith('models') %}text-white{% else %}text-gray-400{% endif %} hover:text-white mb-2">Models</a>
         <a href="/blogs/index.html" class="text-lg {% if page.startswith('blog') %}text-white{% else %}text-gray-400{% endif %} hover:text-white mb-2">Blog</a>
-        <a href="/docs/cli.html" class="text-lg {% if page.startswith('docs') %}text-white{% else %}text-gray-400{% endif %} hover:text-white mb-2">Docs</a>
+        <a href="/docs/getting-started.html" class="text-lg {% if page.startswith('docs') %}text-white{% else %}text-gray-400{% endif %} hover:text-white mb-2">Docs</a>
         <a href="/download.html" class="text-lg {% if page == 'download.html' %}text-white{% else %}text-gray-400{% endif %} hover:text-white mb-2">Download</a>
         <a href="https://github.com/wsmlby/homl" class="text-lg text-gray-400 hover:text-white">GitHub</a>
     </nav>
